sort.basic.lessons.sort.basic.cocktail.AlgCocktailSort1.scala.error
AlgCocktailSort1:15: error: value by is not a member of Int
		for(j <- getNombreValeurs()-2 by -1){
                                              ^